--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -117,7 +117,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 
 
 \abstract{%
-At the LHC energy of $\sqrt s = 7\un{TeV}$, TOTEM has measured in several runs under various beam and background conditions, luminosities, and Roman Pot positions the differential cross-section for proton-proton elastic scattering as a function of the four-momentum transfer squared $t$. The results of the different analyses are in excellent agreement demonstrating no sizeable dependence on the beam conditions. Due to the very close approach of the Roman Pot detectors to the beam center ($\approx 5\sigma_{\rm beam}$) in a dedicated run with$\beta^*=90\un{m}$, $|t|$-values down to $5\cdot10^{-3}\un{GeV^2}$ were reached. The exponential slope of the differential elastic cross-section in this newly explored t-region stayed unchanged and hence an exponential fit with only one constant $B = (19.9 \pm 0.3)\un{GeV^{-2}}$ over the large $|t|$-range from $0.005$ to $0.2\un{GeV^2}$ describes well the differential distribution. The high precision of the measurement and the large lever arm lead to an error on the slope parameter $B$ which is remarkably small compared to previous experiments. It allows a precise extrapolation over the non-visible cross-section (only  $9\%$) to $t=0$. With the luminosity from CMS the elastic cross-section was determined to $(25.4 \pm 1.1)\un{mb}$ and using in addition the optical theorem the total $\rm pp$ cross-section was derived to $(98.6 \pm 2.2)\un{mb}$.
+At the LHC energy of $\sqrt s = 7\un{TeV}$, TOTEM has measured in several runs under various beam and background conditions, luminosities, and Roman Pot positions the differential cross-section for proton-proton elastic scattering as a function of the four-momentum transfer squared $t$. The results of the different analyses are in excellent agreement demonstrating no sizeable dependence on the beam conditions. Due to the very close approach of the Roman Pot detectors to the beam center ($\approx 5\sigma_{\rm beam}$) in a dedicated run with $\beta^*=90\un{m}$, $|t|$-values down to $5\cdot10^{-3}\un{GeV^2}$ were reached. The exponential slope of the differential elastic cross-section in this newly explored $|t|$-region stayed unchanged and hence an exponential fit with only one constant $B = (19.9 \pm 0.3)\un{GeV^{-2}}$ over the large $|t|$-range from $0.005$ to $0.2\un{GeV^2}$ describes well the differential distribution. The high precision of the measurement and the large lever arm lead to an error on the slope parameter $B$ which is remarkably small compared to previous experiments. It allows a precise extrapolation over the non-visible cross-section (only  $9\%$) to $t=0$. With the luminosity from CMS the elastic cross-section was determined to $(25.4 \pm 1.1)\un{mb}$ and using in addition the optical theorem the total $\rm pp$ cross-section was derived to $(98.6 \pm 2.2)\un{mb}$.
 %
 For model comparisons the $t$-distributions are tabulated including the large $|t|$-range of the previous measurement \cite{epl95}.
 }
@@ -290,7 +290,7 @@ We identified two acceptance limitations: the detector edge (relevant for lower 
 
 The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all three datasets and all diagonals yields one-arm resolutions $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter is predominantly given by the beam-divergence, the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch.
 
-The $t$-resolution impact on $\d\sigma_{\rm el}/\d t$  was determined (and eliminated) by an iterative procedure, Tthat starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the un-smearing correction. The correction is applied to the observed $t$-distribution and yields a better estimate of the true $t$-distribution. These two steps were repeated three times to reach convergence. The systematic uncertainty of this procedure (due to the uncertainty of the $\theta^*_{x, y}$ resolution) was estimated smaller than $0.5\%$.
+The $t$-resolution impact on $\d\sigma_{\rm el}/\d t$  was determined (and eliminated) by an iterative procedure, that starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the un-smearing correction. The correction is applied to the observed $t$-distribution and yields a better estimate of the true $t$-distribution. These two steps were repeated three times to reach convergence. The systematic uncertainty of this procedure (due to the uncertainty of the $\theta^*_{x, y}$ resolution) was estimated smaller than $0.5\%$.
 
 %-------------------------
 \subsection{Efficiencies}
@@ -365,15 +365,15 @@ total &	4.5\% &	4.3\% &	4.2\% &	4.3\% &	4.3\% &	5.1\% &	6.1\% &	9.3\% &	12.9\% \
 \fi
 $|t|\ung{GeV^2}$ & $t$-dependent & normalization & luminosity & total\cr
 \hline
-$0.005$	&	$1.8\%$		& 			& 			& $4.5\%$ \cr
-$0.01$	&	$1.0\%$		& 			& 			& $4.3\%$ \cr
-$0.06$	&	$0.3\%$		& 			& 			& $4.2\%$ \cr
-$0.1$	&	$0.9\%$		& 			& 			& $4.3\%$ \cr
+$0.005$	&	$1.8\%$		& $\cdot$	& $\cdot$ 	& $4.5\%$ \cr
+$0.01$	&	$1.0\%$		& $\cdot$	& $\cdot$ 	& $4.3\%$ \cr
+$0.06$	&	$0.3\%$		& $\cdot$	& $\cdot$ 	& $4.2\%$ \cr
+$0.1$	&	$0.9\%$		& $\cdot$	& $\cdot$ 	& $4.3\%$ \cr
 $0.12$	&	$1.2\%$		& $1.2\%$	& $4.0\%$	& $4.3\%$ \cr
-$0.16$	&	$3.0\%$		& 			& 			& $5.1\%$ \cr
-$0.2$	&	$4.4\%$		& 			& 			& $6.1\%$ \cr
-$0.3$	&	$8.3\%$		& 			& 			& $9.3\%$ \cr
-$0.4$	&	$12.3\%$	& 			& 			& $12.9\%$ \cr
+$0.16$	&	$3.0\%$		& $\cdot$	& $\cdot$ 	& $5.1\%$ \cr
+$0.2$	&	$4.4\%$		& $\cdot$	& $\cdot$ 	& $6.1\%$ \cr
+$0.3$	&	$8.3\%$		& $\cdot$	& $\cdot$ 	& $9.3\%$ \cr
+$0.4$	&	$12.3\%$	& $\cdot$	& $\cdot$ 	& $12.9\%$ \cr
 \hline
 \end{tabular}
 \end{center}
@@ -400,12 +400,6 @@ $0.4$	&	$12.3\%$	& 			& 			& $12.9\%$ \cr
 %--------------------------------------------------
 \section{Results}
 
-The differential cross-section results obtained from different datasets and different diagonals match perfectly with each other and with our previous publication \cite{epl95}. Merging the data from all datasets and diagonals gives the differential cross-section presented in Fig.~\ref{fig:dsdt} and Tab.~\ref{tab:data low t}. The first two bins suffer from the lower statistic of the datasets 2 and 3. Tab.~\ref{tab:data low t} gives a representative $t$ value for each bin, determined according to the procedure described in \cite{lafferty94}. The relative uncertainties of the representative points turn out negligible ($< 10^{-4}$).
-\iffalse
-. These points were determined from the requirement that bin-based and point-based $\chi^2$ minimizations would lead to identical results \cite{lafferty94}. In practice, each bin $B_i$ of width $w_i$ is represented by $t_i$ value that fulfils $f(t_i) = {1\over w_i} \int_{B_i} f(\tau)\, \d\tau$, where $f(t)$ stands for the $t$-distribution. The uncertainties of the representative points $t_i$ come from the uncertainty of the $f(t)$ determination (fit). Even considering both statistical (bin fluctuations) and systematic (different fit parameterizations) gives negligible uncertainties on the representative $t$-values (relative uncertainties smaller than $10^{-4}$).
-\fi
-
-Tab.~\ref{tab:data medium t} presents the $\d\sigma_{\rm el}/\d t$ continuation to higher $|t|$ values, measured in a different run with $\beta^* = 3.5\un{m}$ optics and published in \cite{epl95}.
 
 \begin{figure*}
 \hbox{}\vskip-8mm
@@ -559,45 +553,34 @@ $0.020\un{GeV^2}$ & $19.93 \pm 0.05 \pm 0.21$ & $19.87 \pm 0.03 \pm 0.33$\cr
 \end{center}
 \end{table}
 
-The measured differential cross-section exhibits purely-exponential decay for $|t| < 0.2\un{GeV^2}$. Tab.~\ref{tab:B} gives elastic slopes $B$ extracted from several $|t|$ regions. All the results are compatible mutually and with the value $B = (20.1 \pm 0.2^{\rm stat} \pm 0.3^{\rm syst})$ determined in our previous publication \cite{epl96} (where the $\d\sigma_{\rm el}/\d t$ data were available only down to $|t| = 0.02\un{GeV^2}$).
 
+The differential cross-section results obtained from different datasets and different diagonals are in excellent agreement with each other and with our previous publication \cite{epl96}. This justifies merging the data from all datasets, giving the differential cross-section tabulated in Tab.~\ref{tab:data low t}. The first two bins suffer from the lower statistic of the datasets 2 and 3. Tab.~\ref{tab:data low t} gives a representative $|t|$-value for each bin, determined according to the procedure described in \cite{lafferty94}. The relative uncertainties of the representative points turn out negligible ($< 10^{-4}$). Tab.~\ref{tab:data medium t} presents the $\d\sigma_{\rm el}/\d t$ continuation to higher $|t|$ values, measured in a different run with $\beta^* = 3.5\un{m}$ optics and published in \cite{epl95}. All TOTEM differential cross-section measurements are compared in Fig.~\ref{fig:dsdt}.
+
+For $|t|$-values below $0.2\un{GeV^2}$, the differential cross-section falls exponentially with $|t|$, justifying the parameterization Eq.~(\ref{eq:extrapolation}). Due to the closer approach of the RP detectors to the beam center (see Tab.1) in these data, the minimal reachable $|t|$-value was lowered from $0.02$ of the previous measurement \cite{epl96} down to $0.005\un{GeV^2}$. However, the exponential slope $B$ of the differential elastic cross-section stayed unchanged in this newly explored $|t|$-region. As presented in Tab.~\ref{tab:B}, the slope does not change with the chosen fit intervals. Consequently, the exponential dependence can be fitted over the large $|t|$-interval from $0.005$ to $0.2\un{GeV^2}$ resulting in a high precision determination of $B$. Compared to previous collider experiments at lower energies (Fig.~\ref{fig:B s}), $B$ rises steadily with the collision energy $\sqrt s$. In a geometrical picture, this shrinking of the differential distribution with energy is interpreted as an increase of the proton size leading to the rise of the total cross-section with energy.
+
+\iffalse
 By extrapolating the differential cross-section to $t=0$ (see Eq.~(\ref{eq:extrapolation})), we determined the intercept
 $\d\sigma_{\rm el}/\d t|_0 = (506.4 \pm 0.9^{\rm stat} \pm 23.0^{\rm syst})\un{mb}$
 -- details on the uncertainty composition can be found in Tab.~\ref{tab:results}. In order to calculate the integrated elastic cross-section, the $\d\sigma_{\rm el}/\d t$ data were summed up to $|t| = 0.415\un{GeV^2}$ and the extrapolation was used to determine the low-$|t|$ contribution, where no measurements are available. Due to the very close RP approach to the beam, the ratio of extrapolated to observed elastic cross-section was less than $10\%$. The effect of the neglected higher-$t$ contributions is small compared to the other uncertainties. The calculation yielded $\sigma_{\rm el} = (25.43 \pm 0.03^{\rm stat} \pm 1.07^{\rm syst})\un{mb}$.
+\fi
 
-The optical theorem permits to calculate the total and inelastic cross-sections:
+
+With the aim to derive the elastic and total cross-sections, the extrapolation to the optical point $t=0$ was performed (see Eq.~(\ref{eq:extrapolation}). The fact that $91\%$ of the elastic cross-section was visible, gives high confidence to the derived cross-sections, summarized in Tab.~\ref{tab:results} with their statistical and systematic uncertainties. The elastic data were integrated up to $|t| = 0.415\un{GeV^2}$ (where the effect of the larger $|t|$-contributions is small compared to the other uncertainties), yielding $\sigma_{\rm el} = (25.4 \pm 1.1)\un{mb}$. The optical theorem permits to calculate the total and inelastic cross-section:
 \begin{equation}
 \label{eq:si tot}
 \sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
 \sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
 \end{equation}
 Taking the COMPETE \cite{compete} preferred-model extrapolation of $0.141\pm 0.007$ for the $\rho$ parameter yields
-$\sigma_{\rm tot} = 98.6\un{mb}  \pm 2.2^{\rm syst}$ and
-$\sigma_{\rm inel} = 73.2\un{mb} \pm 1.3^{\rm syst}$ (details on the uncertainty composition are given in Tab.~\ref{tab:results}). The uncertainty of $\sigma_{\rm inel}$ is reduced due to the correlation between $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$.
+$\sigma_{\rm tot}  = (98.6 \pm 2.2)\un{mb}$ and
+$\sigma_{\rm inel} = (73.2 \pm 1.3)\un{mb}$ (the uncertainty of $\sigma_{\rm inel}$ is reduced due to the correlation between $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$).
 %Taking the full COMPETE error band (from considering several fit models) for the $\rho$ parameter $^{+0.01}_{-0.08}$, would result in $\sigma_{\rm tot}$ variation of $^{+0.8}_{-0.1}\un{mb}$. Even that error would be small compared to the other uncertainty contributions.
-
- 
-
-
-
-
 
 
 %--------------------------------------------------
-\section{Conclusions and outlook}
+\section{Outlook}
 
-TOTEM has measured the differential elastic cross-section $\d\sigma_{\rm el}/\d t$ under various beam and background conditions, luminosities and RP detector positions. All results of the different analyses are in excellent agreement with each other. Due to the closer approach of the RP detectors to the beam center, the minimal reachable $|t|$-value was lowered from $0.02\un{GeV^2}$ of the previous measurement \cite{epl96} down to $0.005\un{GeV^2}$. The exponential slope $B$ of the differential elastic cross-section in this newly explored $t$-region stayed unchanged. Consequently, the exponential dependence can be fitted over the large $|t|$-interval from $0.005$ to $0.2\un{GeV^2}$ resulting in a high precision of the slope parameter $B$ compared to previous experiments as shown in Fig.~\ref{fig:B s} where the rise of the slope parameter $B$ with energy is shown. In a geometrical picture, this shrinking of the differential distribution is often interpreted as an increase of the proton size with energy leading to the rise of the total cross-section.
-
-The extrapolation to the optical point at $t=0$ was performed with large statistics over a small $t$-interval ($91\%$ of the elastic cross-section was visible) giving high confidence to the derived total and elastic cross-sections.
-
-To facilitate the comparisons with models, the new data are tabulated in Tab.~\ref{tab:data low t} together with Tab.~\ref{tab:data medium t} presenting the data of \cite{epl95} at larger $|t|$-values taking carefully into account the error determination and propagation.
-
-In the spirit of the $\beta^* = 90\un{m}$ optics developments, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under investigation. If still used this year at the reduced energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around $5\cdot 10^{-4}\un{GeV^2}$ will allow the study of the Coulomb-Nuclear interference and consequently a determination of the $\rho$ parameter.
-
-TODO: $\sigma_{\rm inel}$: here inclusively, individual components will be given later -- bridge to paper 2 and future publications
-
-TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$ and $90\un{m}$
-
+The above measurements will be repeated this year at the higher energy of $\sqrt s = 8\un{TeV}$. Furthermore, in the spirit of the $90\un{m}$ optics developments, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under investigation. If still used this year at the reduced energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around  $5\cdot 10^{-4}\un{GeV^2}$ (where Coulomb and Nuclear cross-sections are about equal) will allow the study of the Coulomb-Nuclear interference and consequently the determination of the $\rho$ parameter. Likewise, measurements of large $|t|$ elastic scattering are under study. Cross-section measurements that are either $\rho$ or luminosity independent are the subject of the following papers.
 
 
 
@@ -623,20 +606,6 @@ TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$ and $90\un{m}$
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 
-\bibitem{jinst}
-    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{JINST}{3}{2008}{S08007}
-
-\bibitem{lafferty94}
- 	%``Where to stick your data points: The treatment of measurements within wide bins,''
-	\Name{Lafferty G.~D.~\and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
-
-\bibitem{compete} 
-	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
-	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
-
 \bibitem{P2} 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
@@ -645,9 +614,10 @@ TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$ and $90\un{m}$
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
 
-\bibitem{pdg} 
-	\Name{Nakamura K.~\etal{} (Particle Data Group)}
-	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+\bibitem{jinst}
+    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
+	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
+	\REVIEW{JINST}{3}{2008}{S08007}
 
 \bibitem{jan_thesis}
 	\Name{Ka\v spar J.}
@@ -659,6 +629,19 @@ TODO: planning to repeat the measurement at $\sqrt s = 8\un{TeV}$ and $90\un{m}$
 	{\it Proceedings of the 2nd International Particle Accelerator Conference (IPAC 2011), San Sebastian, Spain}. 
 	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
 	arXiv:1110.5808v1
+
+\bibitem{pdg} 
+	\Name{Nakamura K.~\etal{} (Particle Data Group)}
+	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
+\bibitem{lafferty94}
+ 	%``Where to stick your data points: The treatment of measurements within wide bins,''
+	\Name{Lafferty G.~D.~\and Wyatt T.~R.}
+	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
+
+\bibitem{compete} 
+	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
+	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 	
 
 
