Jim's corrections included
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6192 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined.tex
+++ b/2012/3papers/combined/combined.tex
@@ -196,7 +196,7 @@ One can use the luminosity-independent ratio $\sigma_{\rm el} / \sigma_{\rm inel
 \begin{center}
 \includegraphics[width=18cm]{fig/sigma_tot_el_inel_cmp_big.pdf}
 %\vskip-5mm
-\caption{TODO: do we want this figure?}
+\caption{TODO: Caption, references: PDG, ATLAS, CMS, ALICE and Auger}
 \label{fig:cs}
 \end{center}
 \end{figure*}
@@ -204,8 +204,9 @@ One can use the luminosity-independent ratio $\sigma_{\rm el} / \sigma_{\rm inel
 
 
 \begin{largetable}
-\caption{Cross-section summary. Only systematic uncertainties are indicated, the statistical uncertainties are negligible. Several uncertainty contributions are given: el (from the elastic-scattering analysis), inel (from the inelastic-scattering analysis), ${\cal L}_{\rm int}$ (from the $4\%$ uncertainty of the CMS luminosity measurement) and tot (the total uncertainty).
-The $\rho$-uncertainties follow from the COMPETE preferred-model extrapolation $\rho = 0.141\pm 0.007$.}
+\caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic uncertainty contributions are grouped into several categories -- el (from the elastic-scattering analysis), inel (from the inelastic-scattering analysis), lumi (from the $4\%$ uncertainty of the CMS luminosity measurement) and rho (from the COMPETE preferred-model $\rho$ extrapolation uncertainty of $\pm 0.007$)
+-- together forming the full systematic uncertainty.
+}
 \label{tab:cs}
 \small
 \setlength{\tabcolsep}{1pt}
@@ -215,7 +216,7 @@ The $\rho$-uncertainties follow from the COMPETE preferred-model extrapolation $
 \hline
 &&\multispan2\hss elastic only (Eq.~(\ref{eq:m el})) \hss &\multispan5\hss elastic only (Eq.~(\ref{eq:m el}))\hss &\multispan5\hss $\rho$-independent (Eq.~(\ref{eq:m rho indep}))\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent (Eq.~(\ref{eq:m lumi indep}))\hss\cr
 &&\multispan2\hss June 2011, Ref.~\cite{epl96} \hss &\multispan5\hss October 2011, Ref.~\cite{P1}\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr\hline
-&&& tot &&    el & $\cal L_{\rm int}$ & $\rho$ & tot &&    el & inel & $\cal L_{\rm int}$ & tot &&    el & inel & $\rho$ & tot\cr\hline
+&&& full &&    el & lumi & rho & full &&    el & inel & lumi & full &&    el & inel & rho & full\cr\hline
 $\sigma_{\rm tot}$ & $\rm[mb]$  & $\qquad98.3$ & $\pm 2.8$ &   $98.6$ & $\pm 1.0$ & $\pm 2.0$ & $\pm 0.1$ & $\pm 2.2$  &   $99.1$ & $\pm 0.3$ & $\pm 1.7$ & $\pm 4.0$ & $\pm 4.3$ & $98.0$ & $\pm 1.8$ & $\pm 1.7$ & $\pm 0.2$ & $\pm 2.5$\cr
 $\sigma_{\rm inel}$ & $\rm[mb]$ & $\qquad73.5$ & $\pm 1.6$ &   $73.2$ & $\pm 0.8$ & $\pm 1.0$ & $\pm 0.1$ & $\pm 1.3$  &   $73.7$ &           & $\pm 1.7$ & $\pm 3.0$ & $\pm 3.4$ & $72.9$ & $\pm 1.1$ & $\pm 0.9$ & $\pm 0.1$ & $\pm 1.5$\cr
 $\sigma_{\rm el}$ & $\rm[mb]$   & $\qquad24.8$ & $\pm 1.2$ &   $25.4$ & $\pm 0.3$ & $\pm 1.0$ &           & $\pm 1.1$  &   $25.4$ & $\pm 0.3$ &           & $\pm 1.0$ & $\pm 1.1$ & $25.1$ & $\pm 0.6$ & $\pm 0.9$ & $\pm 0.0$ & $\pm 1.1$\cr\hline
@@ -343,6 +344,11 @@ Acknowledgements -- Insert here the text.
 \bibitem{pdg} 
 	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
+
+
+%F. Halzen, K. Igi, M. Ishida and C.S.Kim
+%Phys. Rev. D85, 074020 (2012)
 
 \end{thebibliography}
 
